Mejoras menú superior

--- a/Esachs/Views/Shared/_Layout.cshtml
+++ b/Esachs/Views/Shared/_Layout.cshtml
@@ -22,12 +22,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <partial name="_MenuPartial" />
-                        @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
-                    </ul>
+                    <partial name="_MenuPartial" />
+                    <partial name="_LinksLogin" />
                 </div>
                 <img class="float-end ms-5"  src="~/img/clientelogo.png" />
             </div>
