--- a/Esachs/Views/Shared/_MenuPartial.cshtml
+++ b/Esachs/Views/Shared/_MenuPartial.cshtml
@@ -11,7 +11,7 @@
             <a class="nav-link text-dark" asp-controller="Reportes" asp-action="Index">Reporte</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="AdminFunc" asp-action="Index">Administración de funcionarios</a>
+            <a class="nav-link text-dark" asp-controller="Adminfuncionarios" asp-action="Index">Administración de funcionarios</a>
         </li>
         @*<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
